--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 
-        <title>twitchchess</title>
+        <title>chessmc</title>
 
         <link rel="stylesheet" type="text/css" href="/static/chessboard.min.css">
 
