--- a/static/index.html
+++ b/static/index.html
@@ -1,22 +1,33 @@
 <!doctype html>
 <html>
     <head>
-
-        <title>chessmc</title>
+        <title>Chessmc</title>
 
         <link rel="stylesheet" type="text/css" href="/static/chessboard.min.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
         <script src="/static/jquery.min.js"></script>
         <script src="/static/chessboard.min.js"></script>
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </head>
+
     <body style="font-size: 20px;">
+        <div class="container" style="width: 800px; margin: 20px auto;">
+            <div style="margin: 40px; text-align: center;">
+                <div style="text-align: left;">
+                    <h4>Chessmc</h4>
+                    <h6 style="font-size: 16px;">Say hi to chessmc! You are white player, drag white pieces and have some fun with chessmc.</h6>
+                </div>
 
-        <a href="/self-play">Self-play</a>
-        <button onclick="newGame()">New game</button><br/>
-        <div id="board" style="width: 600px"></div>
-        <p></p>
+                <div id="board" style="width: 600px; margin: 40px auto; text-align: center;"></div>
 
+                <div class="btn-group" role="group" aria-label="Basic example" style="margin-top: 30px;">
+                    <a type="button"  class="btn btn-dark" style="margin-right: 10px; background-color: #b58863" href="/self-play">Self-play</a>
+                    <button  type="button" class="btn btn-dark"  style="background-color: #b58863" onclick="newGame()">New game</button><br/>
+                </div>
+            </div>
+            <p></p>
+        </div>
         <script type="text/javascript">
 
             var board = ChessBoard('board', {
